--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body, html {
   min-height: 100%;
 }
 
-/* Second image (Portfolio) */
+/* Second image (Hygge) */
 .bgimg-2 {
   background-image: url("/w3images/parallax2.jpg");
   min-height: 400px;
@@ -60,18 +60,19 @@ body, html {
       <i class="fa fa-bars"></i>
     </a>
     <a href="#home" class="w3-bar-item w3-button">HOME</a>
-    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i>portfolio</a>
+    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> About Rysensteen</a>
+    <a href="#Hygge" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i>About the danish family</a>
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
-      <i class="fa fa-search"></i>
+   
+        <a href="https://rysensteen.dk/">
+       <img src="Rysensteen%20gym%20billede%202.jfif" alt="Rysensteen gymnasium" width="75" height="75" style="float:right"></a>
     </a>
   </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
     <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
+    <a href="#Hygge" class="w3-bar-item w3-button" onclick="toggleFunction()">Hygge</a>
     <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
     <a href="#" class="w3-bar-item w3-button">SEARCH</a>
   </div>
@@ -80,17 +81,15 @@ body, html {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">MY <span class="w3-hide-small">WEBSITE</span> LOGO</span>
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Rysensteen <span class="w3-hide-small">Gymnasium</span> </span>
   </div>
 </div>
 
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">ABOUT RYSENSTEEN</h3>
-  <p class="w3-center"><em>I love photography</em></p>
-  <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-    qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p class="w3-center"><em>By Leo D'warte Jensen and Victor Steinrud</em></p>
+  <p>Rysensteen Gymnasium is a high school in Copenhagen. The school was created in 1881 as Laura Engelhardt's school in Stormgade 16. It moved in 1895 to Rysensteensgade 3 and in 1919 was taken over by the municipality of Copenhagen as Rysensteen Gymnasium. In 1932, the school moved to Tietgensgade. Around the millennium, the school had new premises in the old stables of the brown meat Village for the subjects geography, visual arts, Chemistry, science and physics. In 2002, an extensive rebuilding of the main building was made, including The administration area and school study centres were renovated. In January 2003, a new music room was completed. In 2011, you chose because of Space shortage to rent into the premises of the white meat town, more specifically the pork square, which is a 7-8-minute walk from the high school main building. In the danish school system you pick a few subjects to study on A levels, which means you study them all the three years you go to gymnasium. In Rysensteen gymnasium you can pick between music, socialstudys, science and language. </p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>Rysensteen</b></p><br>
@@ -99,94 +98,39 @@ body, html {
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>Rysensteen focuses on a project, called the Global Citizenship Programme. This means that the region becomes the subject of a professional immersion in both the study and compulsory subjects as well as in the interdisciplinary projects all classes have in the three high school years. We have now acquired partner schools for all 12 classes so that they will be able to collaborate virtually with pupils from the partner schools during their secondary school and also to run a professionally based exchange journey to the destinations concerned.</p>
     </div>
-  </div>
-  <p class="w3-large w3-center w3-padding-16">Rysensteen facts:</p>
-  <p class="w3-wide"><i class="fa fa-camera"></i>Students that complete the course</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-laptop"></i>Web Design</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-photo"></i>Photoshop</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
-  </div>
-</div>
+ 
 
-<div class="w3-row w3-center w3-dark-grey w3-padding-16">
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">14+</span><br>
-    Partners
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">55+</span><br>
-    Projects Done
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">89+</span><br>
-    Happy Clients
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">150+</span><br>
-    Meetings
-  </div>
-</div>
 
-<!-- Second Parallax Image with Portfolio Text -->
+<!-- Second Parallax Image with Hygge Text -->
 <div class="bgimg-2 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-    <span class="w3-xxlarge w3-text-white w3-wide">PORTFOLIO</span>
+ 
   </div>
 </div>
 
-<!-- Container (Portfolio Section) -->
-<div class="w3-content w3-container w3-padding-64" id="portfolio">
-  <h3 class="w3-center">MY WORK</h3>
-  <p class="w3-center"><em>Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to make them bigger</em></p><br>
-
-  <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
-  <div class="w3-row-padding w3-center">
-    <div class="w3-col m3">
-      <img src="/w3images/p1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
-    </div>
-  </div>
-
-  <div class="w3-row-padding w3-center w3-section">
-    <div class="w3-col m3">
-      <img src="/w3images/p5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
-    </div>
-    <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
-  </div>
+<!-- Container (Hygge Section) -->
+ <div class="w3-center w3-container w3-padding-64" id="Hygge">
+     <h3 class="w3-center">About the danish family</h3>
+     <p>In danish typical families most families are small. The nuclear family is the center of the social structure. Danish children are raised to be independent from an early age. Most are put in day care centres at about 1 years old. The Danish government subsidizes child care through the local kommunes. Marriage is not a prerequisite to starting a family. Many couples live together without legalizing the arrangement with marriage, as religion doesn't have a huge importance in Denmark.
+The classic danish family culture revolves heavily around the word “hygge”. Sitting with the whole family on christmas eve, or just eating dinner together with the family. 
+ <br>
+Hygge is a Danish and Norwegian word with a partially unique definition. Hygge is one in the Danish adjective, meaning cozy, pleasant, friendly and good. In addition, Hygge also has consistent positive-coated connotations such as security, intimate, in a safe Home, nice and trusting. These meanings are often used as a term for typical Danish. The word hygge implies something nice, casual, safe and recognisable. As these words focus on a physical being/condition, while the Danish and Norwegian focus on a psychological state. A period of time where all psychological, and not physical, needs are balanced. Most often, socialising is associated with social interactions. 
+ <br>
+In Argentina, the family is characterized much more by respect, especially to the elderly. In an Argentine household, many generations are often found. There is room for grandmother and sometimes great-grandmother. The whole family is gathered on a household. In Argentina you will typically find the same customs and unwritten rules as here in Denmark. For example regarding table custom and dress. However, there are a few cultural differences, such as It is also perfectly normal to get 30-45 minutes late for events.
+</p>
+     <br>
+     <br>
+     <iframe width="750" height="340" src="https://www.youtube.com/embed/r8VAksNMroY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+     <br>
+     <br>
+     <br>
+     <br>
+         <br>
+       <br>
+       <br>
+     <br>
 </div>
 
 <!-- Modal for full size images on click-->
@@ -198,29 +142,30 @@ body, html {
   </div>
 </div>
 
-<!-- Third Parallax Image with Portfolio Text -->
+<!-- Third Parallax Image with Hygge Text -->
 <div class="bgimg-3 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
-  </div>
-</div>
+     <span class="w3-xxlarge w3-text-white w3-wide"></span>
+<div></div>
+<div></div>
 
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">WHERE I WORK</h3>
-  <p class="w3-center"><em>I'd love your feedback!</em></p>
+  <h3 class="w3-center">Contact Rysensteen</h3>
+  <p class="w3-center"><em>For more information, click on the Rysensteen Gymnasium logo above, or contact us with phone or Email</em></p>
 
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
-      <img src="/w3images/map.jpg" class="w3-image w3-round" style="width:100%">
+
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Chicago, US<br>
-        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +00 151515<br>
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: mail@mail.com<br>
+        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Adress: Tietgensgade 74
+     1704 København V<br>
+        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone:+45 33 24 43 11<br>
+        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: mail@rysensteen.dk<br>
       </div>
-      <p>Swing by for a cup of <i class="fa fa-coffee"></i>, or leave me a note:</p>
+      <p>Leave the creator of this website a note:</p>
       <form action="/action_page.php" target="_blank">
         <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
           <div class="w3-half">
